--- a/index.html
+++ b/index.html
@@ -10,17 +10,22 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https: //fonts.googleapis.com/css2? family= Noto+Serif:wght@400;700 & display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <div>
             <img class="logo" src="assets/img/Logo.png" alt="logo">
             <span class="title"><strong>Toboolist</strong></span>
         </div>
-
     </header>
-
     <main>
-
+        <div class="container">
+            <div class="buttons">
+                <button class="button1">add task</button>
+                <button disabled class="button2">add section</button>
+            </div>
+            <hr>
+        </div>
     </main>
 
     <footer>
