--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
         </div>
     </header>
     <main>
-        <div class="container">
+        <div class="container2">
             <div class="buttons">
                 <button class="button1">add task</button>
                 <button disabled class="button2">add section</button>
             </div>
-            <hr>
+        </div>
+        
+        <div class="container">
+            
         </div>
     </main>
 
