--- a/index.html
+++ b/index.html
@@ -19,18 +19,16 @@
         </div>
     </header>
     <main>
-        <div class="container2">
-            <div class="buttons">
-                <button class="button1">add task</button>
-                <button disabled class="button2">add section</button>
+        <div class="conteiner">
+            <div id="button">
+                <button class="blue">Add task</button>
+                <button class="white">Add section</button>
             </div>
         </div>
-        
-        <div class="container">
+        <div>
             
         </div>
     </main>
-
     <footer>
 
     </footer>
