fine ma errore nella struttura

--- a/index.html
+++ b/index.html
@@ -19,14 +19,73 @@
         </div>
     </header>
     <main>
-        <div class="conteiner">
-            <div id="button">
+        <div class="container">
+            <div id="buttons">
                 <button class="blue">Add task</button>
                 <button class="white">Add section</button>
             </div>
         </div>
-        <div>
-            
+        <div class="list">
+            <div>
+                &#9660;<h2>New task</h2>
+                <ul>
+                    <li>
+                        <span class="v">&#10003;</span>
+                        Quanterly Newsletter
+                        <span class="azzurro">Editorial</span>
+                    </li>
+                </ul>
+            </div>
+            <div class="list2">
+                &#9660;<h2>Today</h2>
+                <ul>
+                    <li>
+                        <span class="v">&#10003</span>
+                        Recruiting blog post
+                        <span class="azzurro">Editorial</span>
+                    </li>
+                    <li>
+                        <span class="v">&#10003</span>
+                        Mobile app launch
+                        <span class="viola">Goals</span>
+                    </li>
+                    <li>
+                        <span class="x">&#215</span>
+                        Interview John H.
+                        <span class="acqua">Recruiting</span>
+                    </li>
+                    <li>
+                        <span class="v">&#10003</span>
+                        Summit update to mobile storefronts
+                        <span class="arancione">Mobile</span>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                &#9660;<h2>Upcoming</h2>
+                <ul>
+                    <li>
+                        <span class="x">&#215</span>
+                        Schedule meeting with Alex
+                        <span class="azzurro">Editorial</span>
+                    </li>
+                    <li>
+                        <span class="v">&#10003</span>
+                        Homepage refresh
+                        <span class="fucsia">website</span>
+                    </li>
+                    <li>
+                        <span class="v">&#10003</span>
+                        Onboard new sales team member
+                        <span class="verde">Sales</span>
+                    </li>
+                    <li>
+                        <span class="v">&#10003</span>
+                        Review editorial calendar
+                        <span class="azzurro">Editorial</span>
+                    </li>
+                </ul>
+            </div>
         </div>
     </main>
     <footer>
